ansible/roles/deploy-nexus/files/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
       name: nexus
  template:
    metadata:
      labels:
        app: nexus
        name: nexus
        app.openshift.io/runtime: nexus
    spec:
      containers:
        - name: nexus
          image: registry.connect.redhat.com/sonatype/nexus-repository-manager:latest
          resources:
            limits:
              memory: "4Gi"
              cpu: "1000m"
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8081
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 1024Mi
            requests:
              memory: 512Mi
          volumeMounts:
          - mountPath: /nexus-data
            name: nexus-data
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8081'
  labels:
    app: nexus
spec:
  selector:
    app: nexus
  ports:
    - port: 8081
      name: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus
  labels:
    app: nexus
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: nexus
